--- a/base/rootfs/etc/php/7.0/fpm/pool.d/020-www.conf
+++ b/base/rootfs/etc/php/7.0/fpm/pool.d/020-www.conf
@@ -1,6 +1,5 @@
 [global]
-; error_log = /proc/self/fd/2
-error_log = /var/log/php/error.log
+error_log = /tmp/logpipe
 daemonize = no
 pid = /dev/null
 
@@ -24,15 +23,14 @@ group = user
 listen = [::]:9000
 
 ; if we send this to /proc/self/fd/1, it never appears
-; access.log = /proc/self/fd/2
-access.log = /var/log/php/access.log
+access.log = /tmp/logpipe
 
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
 ; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-catch_workers_output = yes
+catch_workers_output = no
 
 ; Clear environment in FPM workers
 ; Prevents arbitrary environment variables from reaching FPM worker processes
@@ -76,3 +74,7 @@ clear_env = no
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+
+php_admin_value[error_log] = /tmp/logpipe
+php_admin_value[error_reporting] = E_ALL
+php_admin_value[display_errors] = stderr
