--- a/base/rootfs/etc/php/7.0/fpm/pool.d/020-www.conf
+++ b/base/rootfs/etc/php/7.0/fpm/pool.d/020-www.conf
@@ -1,5 +1,5 @@
 [global]
-error_log = /tmp/logpipe
+error_log = /var/log/app.log
 daemonize = no
 pid = /dev/null
 
@@ -23,7 +23,7 @@ group = user
 listen = [::]:9000
 
 ; if we send this to /proc/self/fd/1, it never appears
-access.log = /tmp/logpipe
+access.log = /var/log/app.log
 
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
@@ -75,6 +75,6 @@ clear_env = no
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
 
-php_admin_value[error_log] = /tmp/logpipe
+php_admin_value[error_log] = /var/log/app.log
 php_admin_value[error_reporting] = E_ALL
 php_admin_value[display_errors] = stderr
